# Serenade-ROS2

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  REFACTORING_SUMMARY.md  WALKER_REFACTORING.md  YanAPI.py  bridge.yaml  chatbot.py  img_preview.py  img_test.py  package.xml  requirements.txt  ros_api.py  ros_api_test.ipynb  ros_api_test.py  run_chatbot.py  run_client.py  run_llm_client.py  run_server.py  run_walker.py  run_walker_calibration.py  sample.ipynb  server.py  setup.py  test_angle.py  test_orbslam3.py  test_param.py  test_servo.py  test_smol_vlm.py  test_walker.py  test_walker_calibration.py  walker.py
.devcontainer/: Dockerfile  devcontainer.json
chatbot/: __init__.py  assistant.py  llm_client.py  main.py  tts.py
client/: __init__.py  comparison_client.py  config.py  da3_client.py  pointcloud_client.py  pointcloud_ros2_node.py  sam3_client.py  vlm_client.py
launch/: all.launch.py  chatbot.launch.py  deps.launch.py  image_bridge.launch.py  pointcloud_validator.launch.py  serenade.launch.py  vlm_server.launch.py  walker.launch.py
modules/: __init__.py  app.py  config.py  depth_processing.py  main.py  models.py  ros_client.py  text_generation.py
resource/: serenade_ros2
ros_api/: __init__.py  camera_pose.py  joint_angle.py  logger.py  model.py  ros_param.py  tracking_data.py
serenade_agent/: __init__.py  config.py  main.py  message_builder.py  response_parser.py  vlm_operations.py
serenade_chatbot/: YanAPI.py  __init__.py  asr.py  assistant.py  main.py  tts.py
serenade_client/: __init__.py  config.py  pointcloud_ros2_node.py
serenade_node/: __init__.py  config.py  image_bridge_node.py  pointcloud_validator_node.py  test_hz_node.py  vlm_server_node.py
serenade_ros_api/: __init__.py  camera_pose.py  model.py  ros_param.py  tracking_data.py
serenade_server/: config.py  vlm_ros2_server.py
serenade_walker/: __init__.py  controller.py  factory.py  kinematics.py  main.py  ros2_walker_node.py
serenade_walker/sequences/: __init__.py  base_sequences.py  default_sequence.py  hand_sequence.py  squat_sequence.py  turn_left_sequence.py  turn_right_sequence.py  walk_straight_sequence.py  walk_target_sequence.py
server/: __init__.py  config.py  da3_server.py  factory.py  sam3_server.py  vlm_ros2_server.py  vlm_server.py
server/api/: flask_app.py
server/depth/: comparison.py  generator.py  pointcloud.py
server/image/: convert.py
server/models/: model_loader.py
server/ros/: client.py  data_processor.py
server/text/: generator.py
walker/: __init__.py  controller.py  factory.py  gait.py  mock_client.py  ros2_walker_node.py
